# glassbox

./: .gitignore  .pre-commit-config.yaml  MATRIX_FREE_SVD.md  README.md  TODO.org  graph_after.txt  graph_before.txt  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py  bench_batched_matvec.py  bench_cheeger.py  bench_hodge.py  bench_triton_matvec.py  extract_gpt2_qk.py
docs/: cheeger-diagnostic-guide.md  magnetic-laplacian.md  operator-choice.md  streaming-modes.md
docs/signals/: README.md  asymmetry.md  conductance.md  cyclic.md  laplacian.md  magnetic.md  routing.md  selfattn.md  spectral.md  tracker.md
examples/passes/: sample_run.txt
experimental/passes/: __init__.py  injector.py
experiments/: analyze.py  extract.py  spectral.py  sweep_pythia_full.sh  uqlm_comparison.py
glassbox/: __init__.py  attention_diagonal.py  attention_tracker.py  cheeger.py  config.py  custom_ops.py  diagnostic.py  handlers.py  hodge.py  laplacian_eigvals.py  main.py  observation_plugin.py  qbuffer.py  results.py  routing.py  svd.py  svd_backend_runner.py  triton_kernels.py  verdict.py  vllm_plugin.py
glassbox/backends/: __init__.py  runner.py  svd_backend.py
glassbox/cli/: analyze.py  extract.py  runner.py  serve.py  train.py
glassbox/diagnostics/: __init__.py  asymmetry.py  cheeger.py  cyclic_triangles.py  laplacian.py  magnetic.py  routing.py  selfattn.py  spectral.py  tracker.py
glassbox/passes/: __init__.py  injector.py  runner.py
notebooks/: glassbox_vs_uqlm_whitebox.ipynb
scripts/: upload_test_splits.py
tests/: conftest.py  test_always_matrix_free.py  test_attention_diagonal.py  test_attention_tracker.py  test_backend_config.py  test_causal.py  test_cheeger.py  test_cheeger_functional.py  test_config.py  test_diagnostic.py  test_handlers.py  test_hodge.py  test_laplacian_eigvals.py  test_observation_integration.py  test_observation_plugin.py  test_q_buffer.py  test_results.py  test_serve.py  test_streaming_cheeger.py  test_svd.py  test_train.py  test_triton.py  test_verdict.py
tests/e2e/: conftest.py  test_extract.py  test_runner.py  test_serve.py
whitebox/: __init__.py  config.py  custom_ops.py  main.py
whitebox/passes/: __init__.py  injector.py  mean.py
