[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "vllm>=0.15.1",
    "pydantic-settings[yaml]",
    "click",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["glassbox*"]

[project.entry-points."vllm.general_plugins"]
glassbox_svd = "glassbox.vllm_plugin:register_svd_backend"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["benchmarks/results", "experiments/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
