[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "vllm>=0.15.1",
    "pydantic-settings[yaml]",
    "click",
]

[project.optional-dependencies]
dev = ["pytest"]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]
train = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
]
serve = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
include = ["glassbox*"]

[project.scripts]
glassbox-run = "glassbox.cli.runner:main"
glassbox-extract = "glassbox.cli.extract:main"
glassbox-analyze = "glassbox.cli.analyze:main"
glassbox-train = "glassbox.cli.train:main"
glassbox-serve = "glassbox.cli.serve:main"

[project.entry-points."vllm.general_plugins"]
glassbox_svd = "glassbox.vllm_plugin:register_svd_backend"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["benchmarks/results", "experiments/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
